# DobbyDB

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.sh  config.toml  config_demo.toml  df.txt  dobbydb.txt  index.html  mkdocs.yml  sitemap.xml  tmp.sql  tmp.txt
.github/workflows/: docs.yml  rust.yml
benchmark/: README.md  run_benchmark.py  run_benchmark.sh
benchmark/tpch/: q02.sql  q07.sql  q08.sql  q10.sql  q11.sql  q13.sql  q15.sql  q17.sql
catalog/: index.html
docs/: catalog.md  getting-started.md  index.md  server.md  storage.md  table-format.md
getting-started/: index.html
search/: search_index.json
server/: index.html
src/app/: Cargo.toml
src/app/src/: context.rs  lib.rs
src/app/src/catalog/: glue.rs  hms.rs  internal.rs  manager.rs  mod.rs  table_definition_build.rs  table_definition_builder.rs
src/app/src/catalog/data_file_format/: parquet.rs
src/app/src/catalog/table_format/: hive.rs  iceberg.rs  metadata_table.rs  mod.rs  table_provider_factory.rs
src/app/src/catalog/table_format/delta/: delta_table_provider.rs
src/app/src/catalog/table_format/hive/: hive_file_utils.rs  hive_metadata_table_provider.rs  hive_partition.rs  hive_storage_info.rs  hive_table_provider.rs
src/app/src/catalog/table_format/iceberg/: iceberg_hdfs_file_io.rs  iceberg_metadata_scan.rs  iceberg_metadata_table_provider.rs  iceberg_table_provider.rs  metadata_scan.rs  metadata_table_provider.rs  table_provider.rs  table_scan.rs
src/app/src/catalog/table_format/paimon/: mod.rs  paimon_table_provider.rs
src/app/src/server/: cli_helper.rs  mod.rs  repl.rs
src/app/src/server/flight/: flight_sql_server.rs  mod.rs
src/app/src/sql/: mod.rs  parser.rs  session.rs  statements.rs
src/app/src/sql/session/: show.rs  use.rs
src/catalog/: Cargo.toml
src/catalog/src/: catalog.rs  constants.rs  df_catalog.rs  glue_catalog.rs  hms_catalog.rs  internal_catalog.rs  lib.rs  storage.rs  table_format.rs
src/catalog/src/data_file_format/: parquet.rs
src/catalog/src/table_format/: delta.rs  hive.rs  iceberg.rs  table_provider_factory.rs
src/catalog/src/table_format/delta/: delta_table_provider.rs  table_provider.rs
src/catalog/src/table_format/hive/: hive_partition.rs  hive_storage_info.rs  hive_table_provider.rs  hive_type.rs
src/catalog/src/table_format/iceberg/: expr_to_predicate.rs  metadata_scan.rs  metadata_table_provider.rs  scan.rs  table_provider.rs  table_scan.rs
src/common/: Cargo.toml
src/common/src/: runtime.rs
src/parser/: Cargo.toml
src/parser/src/: parser.rs
src/parser/src/ast/: statement.rs
src/server/: Cargo.toml
src/server/src/: exec.rs  flight.rs  main.rs
src/sql/: Cargo.toml
src/sql/src/: catalog.rs  executor.rs  lib.rs  parser.rs  planner.rs  session.rs  statements.rs
src/storage/: Cargo.toml
src/storage/src/: lib.rs  oss_storage.rs  s3_storage.rs  storage.rs
storage/: index.html
stylesheets/: extra.css
table-format/: index.html
