[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "src/app",
    "src/common",
    "src/storage"
]

[workspace.dependencies]
datafusion = "52.1.0"
datafusion-cli = "52.1.0"
sqlparser = "0.59.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "tracing", "rt"] }
console-subscriber = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.5"
futures = "0.3.31"
async-trait = "0.1.88"
url = "2.5.7"
iceberg = "0.9.0"
iceberg-datafusion = "0.9.0"
iceberg-storage-opendal = { version = "0.9.0", default-features = false, features = ["opendal-s3", "opendal-oss"] }
deltalake = { version = "0.31.0", features = ["datafusion", "s3"] }
deltalake-aws = "0.14.0"
dobbydb-app = { path = "src/app" }
dobbydb-storage = {path = "src/storage"}
dobbydb-common = {path = "src/common"}
