[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "src/app",
    "src/common",
    "src/storage"
]

[workspace.dependencies]
datafusion = "53.1.0"
datafusion-cli = "53.1.0"
sqlparser = "0.61.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "tracing", "rt"] }
console-subscriber = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.5"
futures = "0.3.31"
async-trait = "0.1.88"
url = "2.5.7"
iceberg = { git = "https://github.com/apache/iceberg-rust.git", rev = "fda82a249461f8ecf09b6328f6db7272e238844a" }
iceberg-storage-opendal = { git = "https://github.com/apache/iceberg-rust.git", rev = "fda82a249461f8ecf09b6328f6db7272e238844a", default-features = false, features = ["opendal-s3", "opendal-oss"] }
deltalake = { git = "https://github.com/delta-io/delta-rs.git", rev = "0f68868d1dbbe77fa4e99c96df49ae121f8974e4", features = ["datafusion", "s3"] }
deltalake-aws = { git = "https://github.com/delta-io/delta-rs.git", rev = "0f68868d1dbbe77fa4e99c96df49ae121f8974e4" }
dobbydb-app = { path = "src/app" }
dobbydb-storage = {path = "src/storage"}
dobbydb-common = {path = "src/common"}

[profile.release]
lto = true
codegen-units = 1
