[package]
name = "dobbydb-catalog"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { workspace = true }
datafusion = { workspace = true }
toml = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
iceberg = { workspace = true }
iceberg-datafusion = { workspace = true }
tokio = { workspace = true }
deltalake = {workspace = true}
volo-thrift = "0.10.8"
aws-sdk-glue = "1.122.0"
aws-config = "1.8.7"
hive_metastore = "0.2.0"
url = "2.5.7"
