[package]
name = "dobbydb-server"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
rustyline = "17.0.2"
clap = { version = "4.5.48", features = ["derive"] }
datafusion = { workspace = true }
tokio = { workspace = true }
dobbydb-catalog = { workspace = true }
dobbydb-sql = {workspace = true}
futures = { workspace = true }