[package]
name = "dobbydb-sql"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
datafusion = { workspace = true }
sqlparser = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
dobbydb-catalog = { workspace = true }
