[package]
name = "dobbydb-sql"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
datafusion = { workspace = true }
sqlparser = { workspace = true }
tokio = { workspace = true }
dobbydb-catalog = { workspace = true }

[dev-dependencies]
datafusion-cli = { workspace = true }
url = { workspace = true }
